--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,17 @@
   color: #61dafb;
 }
 
+.petRow {
+  width: 50%;
+  float: left;
+  display: flex;
+  flex-direction: row;
+}
+
+.clear {
+  clear: both;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
